28-06-19-2

Bug fix on repeat sheet

28-06-19

fixed bug in permuted temporary set headings

Bug fixing schedules and adding execute

27-06-19

fixed bug in permuted temporary set headings

Export from an execute work - for BI data export

26-06-19

all headings are now checked to see if there are any user choices specified by [] to be changed to the equivalent value

DataRegionHeadings are checked to see if they have explicit attribute names to be converted to the equivalent value (e.g. `This Year`.`Yearstart` -> 2019-01-01

21-06-19

Number standardiseation bug fix (there was a problem with contract line refs)

can accept 'as' expressions in permute terms when creating temporary multi-choice sets

18-06-19

Attempts to detect an import template when there's no import model sheet

fixed provisional so as not to change 'exclusive' set elements

bug fix to stop non xml files tripping the scanning

14-06-19

Option to restore just the reports, untested. Properties for new windows servers added.

11-06-19

Move generated claim settlement files to the outbox as per Ed Broking instructions (on success message from Brokasure)

Textarea and defaults on Excel forms, first try at case insensitivity on file heading lookups

Number of names adjusted, derived from provenance after uploading the file

Altered search for a definitive header. Old logic - if no 'attributesubject' (i.e. heading with 'language' other than date defined), then look for hading with no attribute OR heading with language date.
New logic = after defining all headings, check all those with language 'date'. If those headings are not matched with a heading which 'isAttributeSubject' or has no attribute, then they become 'isAttributeSubject'

More efficient values modified count, start of work to remove typed pair, more properties for new Ed Broking servers

Work to enable executing 'set' instruction to 'set' values as well as sets.

Enabling execute and XML on form submit in Excel

31-05-19
