@@ -114,7 +114,7 @@ gzksd-azq02.scandir=C:\\deployment\\filestoimport\\
 gzksd-azq02.scanbusiness=Ed Broking
 gzksd-azq02.logonpageoverride=edbroking_login
 gzksd-azq02.logonpagecolour=#241bed
-gzksd-azq02.logonpagemessage=<br/><b>DEV - may be updated at any time</b>
+gzksd-azq02.logonpagemessage=<br/><b>W-DEV - may be updated at any time</b>
 gzksd-azq02.groovydir=C:\\deployment\\groovy\\
 gzksd-azq02.xmlscandir= \\\\uk.cg-sc.org\\fs\\BSX\\AzquoUAT\\Export
 gzksd-azq02.xmlscandb=Risk Solutions
@@ -128,7 +128,7 @@ gzksu-azq02.scandir=C:\\deployment\\filestoimport\\
 gzksu-azq02.scanbusiness=Ed Broking
 gzksu-azq02.logonpageoverride=edbroking_login
 gzksu-azq02.logonpagecolour=#eded24
-gzksu-azq02.logonpagemessage=<br/><b>UAT System</b>
+gzksu-azq02.logonpagemessage=<br/><b>W-UAT System</b>
 gzksu-azq02.groovydir=C:\\deployment\\groovy\\
 gzksu-azq02.xmlscandir= \\\\uk.cg-sc.org\\fs\\BSX\\AzquoUAT\\Export
 gzksu-azq02.xmlscandb=Risk Solutions
