@@ -1,5 +1,8 @@
 package com.azquo.util;
 
+import com.azquo.dataimport.ImportService;
+import org.apache.log4j.Logger;
+
 import java.io.*;
 
 /**
@@ -10,6 +13,9 @@ import java.io.*;
  * currently unused but no harm in it being here
  */
 public class CommandLineCalls {
+
+
+    private static final Logger logger = Logger.getLogger(CommandLineCalls.class);
 
     // to GPG I think we'd still need to command line but not yet
     // we may not actually need the FTP in the end either
@@ -39,7 +45,7 @@ public class CommandLineCalls {
             try (BufferedWriter out = new BufferedWriter(new OutputStreamWriter(proc.getOutputStream()))) {
                 out.write(input);
             } catch (IOException io) {
-                System.out.println("Exception at write! " + io.getMessage());
+                logger.warn("Exception at write! " + io.getMessage());
                 return false;
             }
         }
@@ -48,24 +54,24 @@ public class CommandLineCalls {
         InputStreamReader isr = new InputStreamReader(stin);
         BufferedReader br = new BufferedReader(isr);
         String line;
-        System.out.println("input");
+        logger.warn("input");
         while ((line = br.readLine()) != null) {
             if (systemCopy) {
-                System.out.println(line);
+                logger.warn(line);
             }
         }
         stin = proc.getErrorStream();
         isr = new InputStreamReader(stin);
         br = new BufferedReader(isr);
-        System.out.println("error");
+        logger.warn("error");
         while ((line = br.readLine()) != null) {
             if (systemCopy) {
-                System.out.println(line);
+                logger.warn(line);
             }
         }
         int exitVal = proc.waitFor();
         if (systemCopy) {
-            System.out.println("Process exitValue: " + exitVal);
+            logger.warn("Process exitValue: " + exitVal);
         }
         return exitVal == 0;
     }
